# BergenBarnehageSkole

./: README.md  pyproject.toml
E_report/: 20260223-1453_Elever_og_skoler.csv  20260223-1506_Laerertetthet.csv  20260223-1515_Grunnskolepoeng.csv  20260223-1518_Nasjonale_proever_5._trinn.csv  20260223-1523_EUG_-_Mobbing.csv  20260223-1526_Fravaer_i_grunnskole.csv
E_report/人力年度全職當量/: 20260223-1505_Laerere_og_aarsverk.csv
E_report/全國八年級及九年級考試成績/: 20260223-1519_Nasjonale_proever_ungdomstrinn.csv
E_report/十年級成績/: 20260223-1513_Grunnskolekarakterer.csv
scripts/: download_udir_csv.py  map_bergen.py  merge_csvs.py
