[project]
name = "bergen-school-stats"
version = "0.1.0"
description = "Download UDIR grunnskole CSV data, merge, and map Bergen schools"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "playwright>=1.50.0",
  "geopy>=2.4.1",
  "folium>=0.20.0",
]

[tool.setuptools]
py-modules = []
